--- a/index.html
+++ b/index.html
@@ -1,13 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js Demo</title>
-    <link rel="stylesheet" href="style.css">
+    <title>R's ThreeJS Universe</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .feed-container {
+            display: flex;
+            gap: 20px;
+        }
+
+        .feed-item {
+            background-color: #fff;
+            border: 2px solid #ddd;
+            border-radius: 8px;
+            padding: 15px;
+            width: 450px;
+            height: 400px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: box-shadow 0.3s ease, transform 0.3s ease;
+            text-align: center;
+        }
+
+        .feed-item:hover {
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+            transform: translateY(-5px);
+        }
+
+        .feed-item img {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+            /* Ensures the image scales properly */
+            border-radius: 5px;
+        }
+
+        .nav-button {
+            display: block;
+            width: 100%;
+            padding: 12px;
+            font-size: 18px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            margin-top: 15px;
+            cursor: pointer;
+            text-align: center;
+        }
+
+        .nav-button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
+
 <body>
-    <div id="canvas-container"></div>
-    <script type="module" src="main.js"></script>
+    <div class="feed-container">
+        <div class="feed-item">
+            <img src="public/image/thumbnail_three_demo.png">
+            <button class="nav-button" onclick="location.href='app/demo/demo.html'">Three.js Demo</button>
+        </div>
+    </div>
 </body>
 </html>
