Update: Fixed some code

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             width: 100%;
             padding: 12px;
             font-size: 18px;
-            background-color: #4CAF50;
+            background-color: #003399;
             color: white;
             border: none;
             border-radius: 5px;
@@ -62,7 +62,7 @@
         }
 
         .nav-button:hover {
-            background-color: #45a049;
+            background-color: #ffcc00;
         }
     </style>
 </head>
