--- a/app/wiggle3D/wiggle3D.html
+++ b/app/wiggle3D/wiggle3D.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wiggle 3D</title>
-    <link rel="stylesheet" href="style.css">
+    <title>three.js webgl - GLTFloader + EXT_texture_avif</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+    <link type="text/css" rel="stylesheet" href="main.css" />
+    <style>
+        body {
+            background-color: #bfe3dd;
+            color: #000;
+        }
+
+        a {
+            color: #986b60;
+        }
+    </style>
 </head>
+
 <body>
-    <div id="canvas-container"></div>
-    <script type="module" src="wiggle3D.js"></script>
+    <!-- <div id="info">
+        <a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - GLTFLoader +
+        <a href="https://github.com/KhronosGroup/glTF/tree/main/extensions/2.0/Vendor/EXT_texture_avif" target="_blank"
+            rel="noopener">EXT_texture_avif</a><br />
+        Forest House by <a href="https://sketchfab.com/peachyroyalty" target="_blank"
+            rel="noopener">peachyroyalty</a><br />
+    </div> -->
+
+    <script type="importmap">
+			{
+				"imports": {
+					"three": "../build/three.module.js",
+					"three/addons/": "./jsm/"
+				}
+			}
+		</script>
+        <script type="module" src="wiggle3D.js"></script>
 </body>
+
 </html>
